js/js.translator/testData/incremental/invalidation/genericInlineFunctionsWithCrossModuleInliner/lib1/l1.4.kt
inline fun <T: Comparable<T>> foo(x: T) = 123
